--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,4 +16,12 @@
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>CreateNewAccountController</servlet-name>
+        <servlet-class>controller.CreateNewAccountController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CreateNewAccountController</servlet-name>
+        <url-pattern>/create</url-pattern>
+    </servlet-mapping>
 </web-app>
