Add more information in dal

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     </servlet>
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>controller.LoginServlet</servlet-class>
+        <servlet-class>controller.LoginController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
