--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -75,5 +75,27 @@
     <servlet-mapping>
         <servlet-name>LessonVideoController</servlet-name>
         <url-pattern>/LessonVideoController</url-pattern>
+        <servlet-name>UserListController</servlet-name>
+        <servlet-class>controller.UserListController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SettingListController</servlet-name>
+        <servlet-class>controller.SettingListController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UserLogListController</servlet-name>
+        <servlet-class>controller.UserLogListController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UserListController</servlet-name>
+        <url-pattern>/UserList</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SettingListController</servlet-name>
+        <url-pattern>/SettingList</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UserLogListController</servlet-name>
+        <url-pattern>/UserLogList</url-pattern>
     </servlet-mapping>
 </web-app>
