--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -124,8 +124,16 @@
 
     <!-- Declare Controller Servlet -->
     <servlet>
-        <servlet-name>Controller</servlet-name>
-        <servlet-class>controller.Controller</servlet-class>
+        <servlet-name>UserListController</servlet-name>
+        <servlet-class>controller.UserListController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SettingListController</servlet-name>
+        <servlet-class>controller.SettingListController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UserLogListController</servlet-name>
+        <servlet-class>controller.UserLogListController</servlet-class>
     </servlet>
 
     <!-- Declare BlogListServlet -->
@@ -168,8 +176,16 @@
         <servlet-class>controller.RegisterCourseController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Controller</servlet-name>
-        <url-pattern>/Controller</url-pattern>
+        <servlet-name>UserListController</servlet-name>
+        <url-pattern>/UserList</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SettingListController</servlet-name>
+        <url-pattern>/SettingList</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UserLogListController</servlet-name>
+        <url-pattern>/UserLogList</url-pattern>
     </servlet-mapping>
 
     <!-- Map BlogListServlet -->
