--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -12,3 +12,7 @@ javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\84941\\AppData\\Roaming\\NetBeans\\17\\build.properties
+deploy.ant.properties.file=C:\\Users\\HI\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+j2ee.server.home=D:/Tomcat10.23
+j2ee.server.instance=tomcat101:home=D:\\Tomcat10.23
+user.properties.file=C:\\Users\\HI\\AppData\\Roaming\\NetBeans\\17\\build.properties
