--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
     <servlet>
+
         <servlet-name>changePassword</servlet-name>
         <servlet-class>controller.ChangePasswordController</servlet-class>
     </servlet>
@@ -15,5 +16,27 @@
     <servlet-mapping>
         <servlet-name>ForgotPasswordController</servlet-name>
         <url-pattern>/ForgotPasswordController</url-pattern>
+
+        <servlet-name>Controller</servlet-name>
+        <servlet-class>controller.Controller</servlet-class>
+        <servlet-name>BlogListServlet</servlet-name>
+        <servlet-class>com.example.project.controller.BlogListServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Controller</servlet-name>
+        <url-pattern>/Controller</url-pattern>
+        <servlet-name>BlogListServlet</servlet-name>
+        <url-pattern>/blogList</url-pattern>
+
     </servlet-mapping>
+    <!--    <servlet-mapping>
+        <servlet-name>HomepageController</servlet-name>
+        <url-pattern>/Homepage</url-pattern>
+    </servlet-mapping>-->
+    <!--    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>-->
+    <session-config>
+        <session-timeout> 30 </session-timeout>
+    </session-config>
 </web-app>
