--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -97,6 +97,8 @@
     <servlet-mapping>
         <servlet-name>SettingDashboardController</servlet-name>
         <url-pattern>/SettingDashboardController</url-pattern>
+    </servlet-mapping>
+    <servlet>
         <servlet-name>changePassword</servlet-name>
         <servlet-class>controller.ChangePasswordController</servlet-class>
     </servlet>
@@ -112,4 +114,31 @@
         <servlet-name>ForgotPasswordController</servlet-name>
         <url-pattern>/ForgotPasswordController</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>Controller</servlet-name>
+        <servlet-class>controller.Controller</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>BlogListServlet</servlet-name>
+        <servlet-class>com.example.project.controller.BlogListServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Controller</servlet-name>
+        <url-pattern>/Controller</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>BlogListServlet</servlet-name>
+        <url-pattern>/blogList</url-pattern>
+
+    </servlet-mapping>
+    <!--    <servlet-mapping>
+        <servlet-name>HomepageController</servlet-name>
+        <url-pattern>/Homepage</url-pattern>
+    </servlet-mapping>-->
+    <!--    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>-->
+    <session-config>
+        <session-timeout> 30 </session-timeout>
+    </session-config>
 </web-app>
