--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,9 +3,23 @@
     <servlet>
         <servlet-name>Controller</servlet-name>
         <servlet-class>controller.Controller</servlet-class>
+        <servlet-name>BlogListServlet</servlet-name>
+        <servlet-class>com.example.project.controller.BlogListServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/Controller</url-pattern>
+        <servlet-name>BlogListServlet</servlet-name>
+        <url-pattern>/blogList</url-pattern>
     </servlet-mapping>
+    <!--    <servlet-mapping>
+        <servlet-name>HomepageController</servlet-name>
+        <url-pattern>/Homepage</url-pattern>
+    </servlet-mapping>-->
+    <!--    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>-->
+    <session-config>
+        <session-timeout> 30 </session-timeout>
+    </session-config>
 </web-app>
