--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,11 +25,16 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
+file.reference.activation.jar=D:\\Apache Netbeans\\lib\\sending email\\activation.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Apache Netbeans\\lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Apache Netbeans\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.1.jar=D:\\Apache Netbeans\\lib\\lib\\jaxb-api-2.1.jar
-file.reference.mysql-connector-j-9.0.0.jar=D:\\mysql\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
+file.reference.javax.mail.jar=D:\\Apache Netbeans\\lib\\sending email\\javax.mail.jar
+file.reference.jaxb-api-2.1.jar=D:\\Apache Netbeans\\lib\\sending email\\jaxb-api-2.1.jar
+file.reference.jaxb-api-2.1.jar-1=D:\\Apache Netbeans\\lib\\lib\\jaxb-api-2.1.jar
+file.reference.lombok-1.18.24.jar=D:\\Apache Netbeans\\lib\\sending email\\lombok-1.18.24.jar
+file.reference.sqljdbc42.jar=D:\\Apache Netbeans\\lib\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,10 +44,14 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.0.0.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.lombok-1.18.24.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.jaxb-api-2.1.jar}
+    ${file.reference.jaxb-api-2.1.jar-1}:\
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -69,7 +78,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
