--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -12,7 +12,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=
+client.urlPart=/AdminDashboardController
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -25,8 +25,11 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
 file.reference.activation.jar=C:\\Users\\84941\\Desktop\\activation.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\84941\\Downloads\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\84941\\Downloads\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail.jar=C:\\Users\\84941\\Desktop\\javax.mail.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-java-8.0.30.jar
@@ -44,7 +47,10 @@ javac.classpath=\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${libs.jstl.classpath}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -71,7 +77,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
