--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
     <servlet>
-        <servlet-name>UserListController</servlet-name>
-        <servlet-class>controller.UserListController</servlet-class>
+        <servlet-name>AdminDashboardController</servlet-name>
+        <servlet-class>controller.AdminDashboardController</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>SettingListController</servlet-name>
@@ -13,15 +13,15 @@
         <servlet-class>controller.UserLogListController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>UserListController</servlet-name>
-        <url-pattern>/UserList</url-pattern>
+        <servlet-name>AdminDashboardController</servlet-name>
+        <url-pattern>/AdminDashboardController</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>SettingListController</servlet-name>
-        <url-pattern>/SettingList</url-pattern>
+        <url-pattern>/SettingListController</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>UserLogListController</servlet-name>
-        <url-pattern>/UserLogList</url-pattern>
+        <url-pattern>/UserLogListController</url-pattern>
     </servlet-mapping>
 </web-app>
