--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -8,4 +8,7 @@ user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.pro
 deploy.ant.properties.file=C:\\Users\\84941\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
+javac.debug=true
+javadoc.preview=true
+selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\84941\\AppData\\Roaming\\NetBeans\\17\\build.properties
