--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -33,6 +33,8 @@
         <url-pattern>/LessonVideoController</url-pattern>
         <servlet-name>UserListController</servlet-name>
         <servlet-class>controller.UserListController</servlet-class>
+        <servlet-name>AdminDashboardController</servlet-name>
+        <servlet-class>controller.AdminDashboardController</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>SettingListController</servlet-name>
@@ -43,15 +45,15 @@
         <servlet-class>controller.UserLogListController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>UserListController</servlet-name>
-        <url-pattern>/UserList</url-pattern>
+        <servlet-name>AdminDashboardController</servlet-name>
+        <url-pattern>/AdminDashboardController</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>SettingListController</servlet-name>
-        <url-pattern>/SettingList</url-pattern>
+        <url-pattern>/SettingListController</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>UserLogListController</servlet-name>
-        <url-pattern>/UserLogList</url-pattern>
+        <url-pattern>/UserLogListController</url-pattern>
     </servlet-mapping>
 </web-app>
