--- a/nbproject/genfiles.properties
+++ b/nbproject/genfiles.properties
@@ -1,5 +1,6 @@
 build.xml.data.CRC32=d7796023
 build.xml.data.CRC32=554886dd
+build.xml.data.CRC32=f937637a
 build.xml.script.CRC32=6d6b7c37
 build.xml.stylesheet.CRC32=1707db4f@1.93.0.1
 # This file is used by a NetBeans-based IDE to track changes in generated files such as build-impl.xml.
@@ -8,4 +9,6 @@ nbproject/build-impl.xml.data.CRC32=d7796023
 nbproject/build-impl.xml.script.CRC32=e1c30ae7
 nbproject/build-impl.xml.data.CRC32=554886dd
 nbproject/build-impl.xml.script.CRC32=a82f65a1
+nbproject/build-impl.xml.data.CRC32=f937637a
+nbproject/build-impl.xml.script.CRC32=274c8f8e
 nbproject/build-impl.xml.stylesheet.CRC32=334708a0@1.93.0.1
