--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,12 @@ file.reference.javax.mail.jar=C:\\Users\\84941\\Desktop\\javax.mail.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-java-8.0.30.jar
 file.reference.sqljdbc42.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\sqljdbc42.jar
+file.reference.javax.activation-1.2.0.jar=D:\\NetBeans\\javax.activation-1.2.0.jar
+file.reference.javax.mail.jar=D:\\NetBeans\\javax.mail.jar
+file.reference.json-20240303.jar=D:\\NetBeans\\json-20240303.jar
+file.reference.mysql-connector-j-8.4.0.jar=web\\lib\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-java-8.0.30.jar=web\\lib\\mysql-connector-java-8.0.30.jar
+file.reference.sqljdbc42.jar=web\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -51,6 +57,9 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
+    ${file.reference.javax.activation-1.2.0.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.json-20240303.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
