--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,12 @@ file.reference.mysql-connector-j-8.4.0.jar=web/lib/mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=web/lib/mysql-connector-java-8.0.30.jar
 file.reference.org.jacoco.ant-0.8.12.jar=web/lib/org.jacoco.ant-0.8.12.jar
 file.reference.sqljdbc42.jar=web/lib/sqljdbc42.jar
+file.reference.javax.activation-1.2.0.jar=D:\\NetBeans\\javax.activation-1.2.0.jar
+file.reference.javax.mail.jar=D:\\NetBeans\\javax.mail.jar
+file.reference.json-20240303.jar=D:\\NetBeans\\json-20240303.jar
+file.reference.mysql-connector-j-8.4.0.jar=web\\lib\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-java-8.0.30.jar=web\\lib\\mysql-connector-java-8.0.30.jar
+file.reference.sqljdbc42.jar=web\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -68,6 +74,10 @@ javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.mockito-core-5.14.2-javadoc.jar}:\
     ${file.reference.org.jacoco.ant-0.8.12.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.javax.activation-1.2.0.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.json-20240303.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
