--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -103,6 +103,12 @@
     <servlet-mapping>
         <servlet-name>SettingDashboardController</servlet-name>
         <url-pattern>/SettingDashboardController</url-pattern>
+        <servlet-name>changePassword</servlet-name>
+        <servlet-class>controller.changePassword</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>changePassword</servlet-name>
+        <url-pattern>/changePassword</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>changePassword</servlet-name>
