--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,14 +27,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.activation.jar=D:\\Apache Netbeans\\lib\\sending email\\activation.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Apache Netbeans\\lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Apache Netbeans\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail.jar=D:\\Apache Netbeans\\lib\\sending email\\javax.mail.jar
-file.reference.jaxb-api-2.1.jar=D:\\Apache Netbeans\\lib\\sending email\\jaxb-api-2.1.jar
-file.reference.jaxb-api-2.1.jar-1=D:\\Apache Netbeans\\lib\\lib\\jaxb-api-2.1.jar
-file.reference.lombok-1.18.24.jar=D:\\Apache Netbeans\\lib\\sending email\\lombok-1.18.24.jar
-file.reference.sqljdbc42.jar=D:\\Apache Netbeans\\lib\\lib\\sqljdbc42.jar
+file.reference.activation.jar=lib\\sending email\\activation.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=lib\\sending email\\javax.mail.jar
+file.reference.jaxb-api-2.1.jar=lib\\lib\\jaxb-api-2.1.jar
+file.reference.lombok-1.18.24.jar=lib\\sending email\\lombok-1.18.24.jar
+file.reference.mysql-connector-j-8.4.0.jar=lib\\my sql\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-java-8.0.30.jar=lib\\my sql\\mysql-connector-java-8.0.30.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,14 +44,14 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.activation.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.lombok-1.18.24.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.jaxb-api-2.1.jar-1}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.lombok-1.18.24.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
