--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -98,7 +98,7 @@
         <servlet-name>SettingDashboardController</servlet-name>
         <url-pattern>/SettingDashboardController</url-pattern>
         <servlet-name>changePassword</servlet-name>
-        <servlet-class>controller.changePassword</servlet-class>
+        <servlet-class>controller.ChangePassword</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>changePassword</servlet-name>
