--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,6 +42,13 @@ file.reference.json-20240303.jar=D:\\NetBeans\\json-20240303.jar
 file.reference.mysql-connector-j-8.4.0.jar=web\\lib\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=web\\lib\\mysql-connector-java-8.0.30.jar
 file.reference.sqljdbc42.jar=web\\lib\\sqljdbc42.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\mocun\\Documents\\prj301\\ProjectPRJ\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\mocun\\Documents\\prj301\\ProjectPRJ\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=build/web/lib/jaxb-api-2.1.jar
+file.reference.lombok-1.18.24.jar=build/web/lib/lombok-1.18.24.jar
+file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-java-8.0.30.jar
+file.reference.sqljdbc42.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -54,6 +61,10 @@ javac.classpath=\
     ${file.reference.activation.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.lombok-1.18.24.jar}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
     ${file.reference.sqljdbc42.jar}:\
     ${libs.jstl.classpath}:\
