--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,10 @@
 deploy.ant.properties.file=C:\\Users\\mocun\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-file.reference.mysql-connector-j-8.4.0.jar=D:\\H\u1ecdc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\web\\lib\\mysql-connector-j-8.4.0.jar
-file.reference.mysql-connector-java-8.0.30.jar=D:\\H\u1ecdc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\web\\lib\\mysql-connector-java-8.0.30.jar
-file.reference.sqljdbc42.jar=D:\\H\u1ecdc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\web\\lib\\sqljdbc42.jar
+file.reference.mysql-connector-j-8.4.0.jar=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\web\\lib\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-java-8.0.30.jar=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\web\\lib\\mysql-connector-java-8.0.30.jar
+file.reference.sqljdbc42.jar=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\web\\lib\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1_Tomcat10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1_Tomcat10.1
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\mocun\\AppData\\Roaming\\NetBeans\\17\\build.properties
