--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,7 +25,12 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\mocun\\Documents\\prj301\\ProjectPRJ\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\mocun\\Documents\\prj301\\ProjectPRJ\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=build/web/lib/jaxb-api-2.1.jar
+file.reference.lombok-1.18.24.jar=build/web/lib/lombok-1.18.24.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-java-8.0.30.jar
 file.reference.sqljdbc42.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\sqljdbc42.jar
@@ -39,6 +44,10 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.lombok-1.18.24.jar}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
     ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
@@ -67,7 +76,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
