--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,8 @@ file.reference.mysql-connector-j-8.4.0.jar=web/lib/mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=web/lib/mysql-connector-java-8.0.30.jar
 file.reference.org.jacoco.ant-0.8.12.jar=web/lib/org.jacoco.ant-0.8.12.jar
 file.reference.sqljdbc42.jar=web/lib/sqljdbc42.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\NetBeans\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\NetBeans\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.activation-1.2.0.jar=D:\\NetBeans\\javax.activation-1.2.0.jar
 file.reference.javax.mail.jar=D:\\NetBeans\\javax.mail.jar
 file.reference.json-20240303.jar=D:\\NetBeans\\json-20240303.jar
@@ -77,7 +79,9 @@ javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.javax.activation-1.2.0.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.json-20240303.jar}
+    ${file.reference.json-20240303.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
