--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -28,3 +28,13 @@ javadoc.preview=true
 selected.browser=default
 user.properties.file=C:\\Users\\mocun\\AppData\\Roaming\\NetBeans\\17\\build.properties
 
+deploy.ant.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+file.reference.mysql-connector-j-8.4.0.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\SWP391_OnlineLearning\\web\\lib\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-java-8.0.30.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\SWP391_OnlineLearning\\web\\lib\\mysql-connector-java-8.0.30.jar
+file.reference.sqljdbc42.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\SWP391_OnlineLearning\\web\\lib\\sqljdbc42.jar
+j2ee.server.home=D:/Data System/Apache Software Foundation/Tomcat 10.1
+j2ee.server.instance=tomcat101:home=D:\\Data System\\Apache Software Foundation\\Tomcat 10.1
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
+user.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\build.properties
