BlogList, BlogDetails, Homepage update

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -103,6 +103,8 @@
         <servlet-name>changePassword</servlet-name>
         <servlet-class>controller.ChangePasswordController</servlet-class>
     </servlet>
+
+    <!-- Declare ForgotPasswordController Servlet -->
     <servlet>
         <servlet-name>ForgotPasswordController</servlet-name>
         <servlet-class>controller.ForgotPasswordController</servlet-class>
@@ -115,6 +117,8 @@
         <servlet-name>ForgotPasswordController</servlet-name>
         <url-pattern>/ForgotPasswordController</url-pattern>
     </servlet-mapping>
+
+    <!-- Declare Controller Servlet -->
     <servlet>
         <servlet-name>Controller</servlet-name>
         <servlet-class>controller.Controller</servlet-class>
@@ -124,33 +128,52 @@
         <servlet-class>com.example.project.controller.BlogListServlet</servlet-class>
     </servlet>
     <!-- Khai báo servlet BlogListServlet -->
+
+    <!-- Declare BlogListServlet -->
     <servlet>
         <servlet-name>BlogListServlet</servlet-name>
         <servlet-class>controller.BlogListServlet</servlet-class>
     </servlet>
-    <!-- Mapping servlet Controller -->
+
+    <!-- Map ChangePasswordController Servlet -->
+    <servlet-mapping>
+        <servlet-name>changePassword</servlet-name>
+        <url-pattern>/changePassword</url-pattern>
+    </servlet-mapping>
+
+    <!-- Map ForgotPasswordController Servlet -->
+    <servlet-mapping>
+        <servlet-name>ForgotPasswordController</servlet-name>
+        <url-pattern>/ForgotPasswordController</url-pattern>
+    </servlet-mapping>
+
+    <!-- Map Controller Servlet -->
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/Controller</url-pattern>
     </servlet-mapping>
-    <!-- Mapping servlet BlogListServlet -->
+
+    <!-- Map BlogListServlet -->
     <servlet-mapping>
         <servlet-name>BlogListServlet</servlet-name>
         <url-pattern>/blogList</url-pattern>
-
     </servlet-mapping>
-    
+
+    <!-- Declare AuthorizationFilter -->
     <filter>
         <filter-name>AuthorizationFilter</filter-name>
         <filter-class>filter.AuthorizationFilter</filter-class>
     </filter>
+
+    <!-- Map AuthorizationFilter -->
     <filter-mapping>
         <filter-name>AuthorizationFilter</filter-name>
         <url-pattern>/admin/*</url-pattern>
     </filter-mapping>
-    
-    <!-- Cấu hình session -->
+
+    <!-- Session Configuration -->
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
+
 </web-app>
