BlogList, BlogDetails, Homepage update

--- a/nbproject/genfiles.properties
+++ b/nbproject/genfiles.properties
@@ -1,5 +1,12 @@
 build.xml.data.CRC32=1f07e307
 build.xml.data.CRC32=1cee1ec7
+build.xml.data.CRC32=d7796023
+build.xml.data.CRC32=554886dd
+build.xml.data.CRC32=f937637a
+build.xml.data.CRC32=97d7e2fa
+
+
+build.xml.data.CRC32=e0b39013
 build.xml.script.CRC32=6d6b7c37
 build.xml.stylesheet.CRC32=1707db4f@1.93.0.1
 # This file is used by a NetBeans-based IDE to track changes in generated files such as build-impl.xml.
@@ -8,4 +15,16 @@ nbproject/build-impl.xml.data.CRC32=1f07e307
 nbproject/build-impl.xml.script.CRC32=4a08d70e
 nbproject/build-impl.xml.data.CRC32=1cee1ec7
 nbproject/build-impl.xml.script.CRC32=d370bd6e
+nbproject/build-impl.xml.data.CRC32=d7796023
+nbproject/build-impl.xml.script.CRC32=e1c30ae7
+nbproject/build-impl.xml.data.CRC32=554886dd
+nbproject/build-impl.xml.script.CRC32=a82f65a1
+nbproject/build-impl.xml.data.CRC32=f937637a
+nbproject/build-impl.xml.script.CRC32=274c8f8e
+nbproject/build-impl.xml.data.CRC32=97d7e2fa
+nbproject/build-impl.xml.script.CRC32=6c00094e
+nbproject/build-impl.xml.data.CRC32=96ec8ffe
+nbproject/build-impl.xml.script.CRC32=1f8964ab
+nbproject/build-impl.xml.data.CRC32=e0b39013
+nbproject/build-impl.xml.script.CRC32=0d7317f1
 nbproject/build-impl.xml.stylesheet.CRC32=334708a0@1.93.0.1
