update lib for iteration 3

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>MarketingDashboardController</servlet-name>
         <servlet-class>controller.MarketingDashboardController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SaleRegistrationDashboardController</servlet-name>
+        <servlet-class>controller.SaleRegistrationDashboardController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UserDashboardController</servlet-name>
         <url-pattern>/UserDashboardController</url-pattern>
@@ -23,5 +27,9 @@
     <servlet-mapping>
         <servlet-name>MarketingDashboardController</servlet-name>
         <url-pattern>/MarketingDashboardController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SaleRegistrationDashboardController</servlet-name>
+        <url-pattern>/SaleRegistrationDashboardController</url-pattern>
     </servlet-mapping>
 </web-app>
