--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -27,9 +28,19 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-j-8.4.0.jar
-file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-java-8.0.30.jar
-file.reference.sqljdbc42.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\sqljdbc42.jar
+file.reference.hamcrest-core-1.3-javadoc.jar=web/lib/hamcrest-core-1.3-javadoc.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=web/lib/jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=web/lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=web/lib/jaxb-api-2.1.jar
+file.reference.junit-4.12.jar=web/lib/junit-4.12.jar
+file.reference.junit-4.13.2-javadoc.jar=web/lib/junit-4.13.2-javadoc.jar
+file.reference.lombok-1.18.24.jar=web/lib/lombok-1.18.24.jar
+file.reference.mockito-core-4.11.0-javadoc.jar=web\\lib\\mockito-core-4.11.0-javadoc.jar
+file.reference.mockito-core-5.14.2-javadoc.jar=web/lib/mockito-core-5.14.2-javadoc.jar
+file.reference.mysql-connector-j-8.4.0.jar=web/lib/mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-java-8.0.30.jar=web/lib/mysql-connector-java-8.0.30.jar
+file.reference.org.jacoco.ant-0.8.12.jar=web/lib/org.jacoco.ant-0.8.12.jar
+file.reference.sqljdbc42.jar=web/lib/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,8 +51,22 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.hamcrest-core-1.3-javadoc.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.junit-4.13.2-javadoc.jar}:\
+    ${file.reference.lombok-1.18.24.jar}:\
+    ${file.reference.mockito-core-5.14.2-javadoc.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.org.jacoco.ant-0.8.12.jar}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.mockito-core-5.14.2-javadoc.jar}:\
+    ${file.reference.org.jacoco.ant-0.8.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -52,7 +77,14 @@ javac.source=17
 javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.hamcrest-core-1.3-javadoc.jar}:\
+    ${file.reference.junit-4.13.2-javadoc.jar}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.org.jacoco.ant-0.8.12.jar}:\
+    ${file.reference.mockito-core-4.11.0-javadoc.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -73,7 +105,8 @@ platform.active=default_platform
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${file.reference.junit-4.12.jar}
 # Space-separated list of JVM arguments used when running a class with a main method or a unit test
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
 runmain.jvmargs=
