--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>QuizHandleController</servlet-name>
         <servlet-class>controller.QuizHandleController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SpecialQuizController</servlet-name>
+        <servlet-class>controller.SpecialQuizController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>changePassword</servlet-name>
         <url-pattern>/changePassword</url-pattern>
@@ -39,5 +43,9 @@
     <servlet-mapping>
         <servlet-name>QuizHandleController</servlet-name>
         <url-pattern>/QuizHandleController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SpecialQuizController</servlet-name>
+        <url-pattern>/SpecialQuizController</url-pattern>
     </servlet-mapping>
 </web-app>
