Fix registration list

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-file.reference.lombok-1.18.24.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\swp391_onlinelearning\\web\\lib\\lombok-1.18.24_1.jar
-j2ee.server.home=D:/Data System/Apache Software Foundation/Tomcat 10.1
-j2ee.server.instance=tomcat101:home=D:\\Data System\\Apache Software Foundation\\Tomcat 10.1
+deploy.ant.properties.file=C:\\Users\\84941\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
+j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
+javac.debug=true
+javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\84941\\AppData\\Roaming\\NetBeans\\17\\build.properties
